// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`assignReadingOrder — golden snapshot > ambiguous-row-boundary output is stable 1`] = `
[
  {
    "confidence": 0.92,
    "height": 0.4,
    "id": "p2",
    "readingOrder": 1,
    "width": 0.48,
    "x": 0.5,
    "y": 0.18,
  },
  {
    "confidence": 0.92,
    "height": 0.4,
    "id": "p1",
    "readingOrder": 2,
    "width": 0.48,
    "x": 0,
    "y": 0,
  },
]
`;

exports[`assignReadingOrder — golden snapshot > classic-2x3-rtl output is stable 1`] = `
[
  {
    "confidence": 0.95,
    "height": 0.3,
    "id": "p2",
    "readingOrder": 1,
    "width": 0.48,
    "x": 0.5,
    "y": 0,
  },
  {
    "confidence": 0.95,
    "height": 0.3,
    "id": "p1",
    "readingOrder": 2,
    "width": 0.48,
    "x": 0,
    "y": 0,
  },
  {
    "confidence": 0.95,
    "height": 0.3,
    "id": "p4",
    "readingOrder": 3,
    "width": 0.48,
    "x": 0.5,
    "y": 0.35,
  },
  {
    "confidence": 0.95,
    "height": 0.3,
    "id": "p3",
    "readingOrder": 4,
    "width": 0.48,
    "x": 0,
    "y": 0.35,
  },
  {
    "confidence": 0.95,
    "height": 0.28,
    "id": "p6",
    "readingOrder": 5,
    "width": 0.48,
    "x": 0.5,
    "y": 0.7,
  },
  {
    "confidence": 0.95,
    "height": 0.28,
    "id": "p5",
    "readingOrder": 6,
    "width": 0.48,
    "x": 0,
    "y": 0.7,
  },
]
`;

exports[`assignReadingOrder — golden snapshot > diagonal-staircase output is stable 1`] = `
[
  {
    "confidence": 0.95,
    "height": 0.3,
    "id": "p1",
    "readingOrder": 1,
    "width": 0.4,
    "x": 0.55,
    "y": 0,
  },
  {
    "confidence": 0.95,
    "height": 0.3,
    "id": "p2",
    "readingOrder": 2,
    "width": 0.55,
    "x": 0.05,
    "y": 0.2,
  },
  {
    "confidence": 0.95,
    "height": 0.3,
    "id": "p3",
    "readingOrder": 3,
    "width": 0.45,
    "x": 0.4,
    "y": 0.45,
  },
]
`;

exports[`assignReadingOrder — golden snapshot > full-width-strip-vs-side output is stable 1`] = `
[
  {
    "confidence": 0.95,
    "height": 0.5,
    "id": "p2",
    "readingOrder": 1,
    "width": 0.48,
    "x": 0.5,
    "y": 0,
  },
  {
    "confidence": 0.95,
    "height": 0.5,
    "id": "p1",
    "readingOrder": 2,
    "width": 0.48,
    "x": 0,
    "y": 0,
  },
  {
    "confidence": 0.95,
    "height": 0.5,
    "id": "p3",
    "readingOrder": 3,
    "width": 0.98,
    "x": 0,
    "y": 0.25,
  },
]
`;

exports[`assignReadingOrder — golden snapshot > short-anchor-taller-neighbor output is stable 1`] = `
[
  {
    "confidence": 0.95,
    "height": 0.2,
    "id": "p1",
    "readingOrder": 1,
    "width": 0.48,
    "x": 0.5,
    "y": 0,
  },
  {
    "confidence": 0.95,
    "height": 0.5,
    "id": "p2",
    "readingOrder": 2,
    "width": 0.48,
    "x": 0,
    "y": 0.11,
  },
]
`;

exports[`assignReadingOrder — golden snapshot > single-panel output is stable 1`] = `
[
  {
    "confidence": 0.98,
    "height": 0.92,
    "id": "p1",
    "readingOrder": 1,
    "width": 0.92,
    "x": 0.04,
    "y": 0.04,
  },
]
`;

exports[`assignReadingOrder — golden snapshot > staggered-offset-rows output is stable 1`] = `
[
  {
    "confidence": 0.95,
    "height": 0.3,
    "id": "p1",
    "readingOrder": 1,
    "width": 0.48,
    "x": 0.5,
    "y": 0,
  },
  {
    "confidence": 0.95,
    "height": 0.38,
    "id": "p2",
    "readingOrder": 2,
    "width": 0.48,
    "x": 0,
    "y": 0,
  },
  {
    "confidence": 0.95,
    "height": 0.3,
    "id": "p3",
    "readingOrder": 3,
    "width": 0.48,
    "x": 0.5,
    "y": 0.33,
  },
  {
    "confidence": 0.95,
    "height": 0.3,
    "id": "p4",
    "readingOrder": 4,
    "width": 0.48,
    "x": 0,
    "y": 0.33,
  },
]
`;

exports[`assignReadingOrder — golden snapshot > tall-left-stacked-right output is stable 1`] = `
[
  {
    "confidence": 0.95,
    "height": 0.43,
    "id": "p2",
    "readingOrder": 1,
    "width": 0.48,
    "x": 0.5,
    "y": 0,
  },
  {
    "confidence": 0.95,
    "height": 0.43,
    "id": "p3",
    "readingOrder": 2,
    "width": 0.48,
    "x": 0.5,
    "y": 0.47,
  },
  {
    "confidence": 0.95,
    "height": 0.9,
    "id": "p1",
    "readingOrder": 3,
    "width": 0.48,
    "x": 0,
    "y": 0,
  },
]
`;

exports[`assignReadingOrder — golden snapshot > three-column-tall-middle output is stable 1`] = `
[
  {
    "confidence": 0.95,
    "height": 0.47,
    "id": "p1",
    "readingOrder": 1,
    "width": 0.32,
    "x": 0.68,
    "y": 0,
  },
  {
    "confidence": 0.95,
    "height": 0.47,
    "id": "p2",
    "readingOrder": 2,
    "width": 0.32,
    "x": 0.68,
    "y": 0.5,
  },
  {
    "confidence": 0.95,
    "height": 0.97,
    "id": "p3",
    "readingOrder": 3,
    "width": 0.32,
    "x": 0.34,
    "y": 0,
  },
  {
    "confidence": 0.95,
    "height": 0.47,
    "id": "p4",
    "readingOrder": 4,
    "width": 0.32,
    "x": 0,
    "y": 0,
  },
  {
    "confidence": 0.95,
    "height": 0.47,
    "id": "p5",
    "readingOrder": 5,
    "width": 0.32,
    "x": 0,
    "y": 0.5,
  },
]
`;
